reducing width and height to prevent scrollbars from showing up.

--- a/static/style.css
+++ b/static/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 .time-wrapper {
-    width: 320px;
-    height: 240px;
+    width: 310px;
+    height: 210px;
 }
 
 .time-clock {
